--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,14 @@ instance/
 *.db
 *.sqlite3
 
+# === Node / JS / Vite ===
+frontend/node_modules/
+frontend/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
 # === Docker ===
 *.pid
 *.tar
