--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,8 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend:/app
+      - node_modules:/app/node_modules
     command: ["npm", "run", "dev", "--", "--host"]
+
+volumes:
+  node_modules:
